# model-training

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CONTRIBUTING.md  LICENSE  README.md  a1_RestaurantReviews_HistoricDump.tsv.dvc  classification_report.json  dvc.yaml  noxfile.py  params.yaml  pyproject.toml  requirements.txt  train.py
.dvc/: config
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
models/: c1_BoW_Sentiment_Model.pkl
src/model_training/: __init__.py  __main__.py  evaluate.py  params.py  preprocess.py  train.py
tests/: __init__.py  conftest.py  test_cli.py  test_data_cleaning.py  test_evaluation.py  test_feature_and_data.py  test_main.py  test_ml_infratructure.py  test_model_development.py  test_model_development_robustness.py  test_monitoring.py  test_params.py  test_preprocess.py  test_preprocessing.py  test_train.py
tests/resources/: preprocessed_positive_only.tsv  restaurant_reviews_test.tsv  restaurant_reviews_test_preprocessed.tsv
