[tool.poetry]
name = "model-training"
version = "0.3.0"
description = "Model Training"
authors = ["remla23-team18"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/remla23-team18/model-training"
repository = "https://github.com/remla23-team18/model-training"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/remla23-team18/model-training/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
nltk = "^3.8.1"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
pandas-stubs = "^2.0.1.230501"
dvc-gdrive = "^2.19.2"

[tool.poetry.scripts]
model-training = "model_training.__main__:cli"

[tool.poetry.group.dev.dependencies]
mllint = "^0.12.2"
pylint = "^2.17.4"
bandit = "^1.7.5"
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}
dvc = "^2.58.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["model_training", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.mllint.code-quality]
# Remove bandit because it doesn't respect config file when run in mllint
linters = ["pylint", "mypy", "black", "isort"]

[tool.bandit]
exclude_dirs = ["./.nox/*"]

[tool.pylint.main]
ignore = ["docs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
